# smartevse

./: .gitmodules  AUTHORS  CLI.md  CMakeLists.txt  README.md
bootloader/PIC18 Bootloader/: PIC18 Bootloader.asm  PIC18 Bootloader.mcp  PIC18 Bootloader.mcw  bootconfig.inc
cad/: Sensorbox.scad  Sensorbox.stl  Sensorbox2.scad  Sensorbox2.stl  utils.scad
eagle/: 3PCurrentTX.brd  3PCurrentTX.sch  LCD_board.brd  LCD_board.sch  SmartEVSE.brd  SmartEVSE.sch
src/: CMakeLists.txt  CurrentTX.c  EVSE.c  EVSE.h  EVSE_CTX.hex  EVSE_CTX.mcp  EVSE_CTX.mcw  EVSE_MAIN.hex  EVSE_MAIN.mcp  EVSE_MAIN.mcw  LCD.c  LCD.h
version2/: .gitignore  CMakeLists.txt  README.md
version2/SmartEVSE2.X/: EVSE.c  EVSE.h  GLCD.c  GLCD.h  OneWire.c  OneWire.h  bootloader.c  bootloader.h  modbus.c  modbus.h  utils.c  utils.h
version2/SmartEVSE2.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
version2/SmartEVSE2.X/nbproject/private/: SuppressibleMessageMemo.properties  configurations.xml  private.xml
version2/eagle/: LCD_boardv2.brd  LCD_boardv2.sch  SmartEVSEv2.2.brd  SmartEVSEv2.2.sch  SmartEVSEv2.brd  SmartEVSEv2.sch
